--- a/apps/beeswax/java/pom.xml
+++ b/apps/beeswax/java/pom.xml
@@ -139,14 +139,14 @@
   </build>
 
   <repositories>
-+    <repository>
-+      <id>org.datanucleus</id>
-+      <url>http://www.datanucleus.org/downloads/maven2</url>
-+      <name>DataNucleus for Beeswax</name>
-+      <snapshots>
-+        <enabled>true</enabled>
-+      </snapshots>
-+    </repository>
-+  </repositories>
+    <repository>
+      <id>org.datanucleus</id>
+      <url>http://www.datanucleus.org/downloads/maven2</url>
+      <name>DataNucleus for Beeswax</name>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
 </project>
